--- a/index.html
+++ b/index.html
@@ -2409,28 +2409,13 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Ambil Promo Perdana Sekarang!</h2>
-                <p class="section-subtitle">Harga promo ini hanya untuk validasi pasar. Dapatkan website 1 halaman profesional dengan investasi minimal.</p>
+                <p class="section-subtitle">Jangan tunda lagi! Harga promo super hemat ini terbatas. Amankan website profesional Anda sekarang</p>
             </div>
             
             <div class="cta-content">
                 <a href="#pricing" class="btn cta-button-large" onclick="return scrollToForm()">
-                    <i class="fas fa-bolt"></i> Lihat Paket Promo & Pesan Sekarang
+                    <i class="fas fa-bolt"></i> Lihat Paket & Pesan Sekarang
                 </a>
-                
-                <div class="guarantee-badges">
-                    <div class="guarantee-badge">
-                        <i class="fas fa-clock"></i>
-                        <span>Harga Promo Terbatas Waktu</span>
-                    </div>
-                    <div class="guarantee-badge">
-                        <i class="fas fa-server"></i>
-                        <span>Hosting Gratis Selamanya</span>
-                    </div>
-                    <div class="guarantee-badge">
-                        <i class="fas fa-shield-alt"></i>
-                        <span>Revisi Gratis Selama 7 Hari</span>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
