--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,6 @@
                         <li><a href="#pricing" class="nav-link">Harga</a></li>
                         <li><a href="#process" class="nav-link">Proses</a></li>
                         <li><a href="#after-sales" class="nav-link">After Sales</a></li>
-                        <li><a href="#contact" class="nav-link">Kontak</a></li>
                     </ul>
                     
                     <!-- Header Social Icons - Desktop Only -->
@@ -1889,9 +1888,8 @@
     <!-- Floating WhatsApp Button -->
     <div class="floating-whatsapp">
         <div class="whatsapp-notification">
-            <i class="fas fa-comment-dots"></i>
         </div>
-        <a href="https://wa.me/6289526382162?text=Halo,%20saya%20mau%20konsultasi%20tentang%20promo%20website%201%20halaman" 
+        <a href="https://wa.me/6289526382162?text=Halo,%20saya%20mau%20konsultasi%20tentang%20promo%20website%20di%20WebSipp" 
            class="whatsapp-button" 
            target="_blank"
            title="Chat via WhatsApp">
